--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <!-- <script
-      src="https://kit.fontawesome.com/67a3cf6426.js"
-      crossorigin="anonymous"
-    ></script> -->
   </head>
   <body>
     <header id="header">
-      <img src="./logo.png" alt="Chess Pieces" id="header-img" />
-      <input type="checkbox" id="menu-icon" />
-      <label for="menu-icon"><i class="fas fa-bars"></i></label>
+      <img
+        src="https://i.imgur.com/RX3x0aj.png"
+        alt="Chess Pieces"
+        id="header-img"
+      />
       <nav id="nav-bar">
         <a href="#features" class="nav-link">Features</a>
         <a href="#materials" class="nav-link">Materials</a>
@@ -134,7 +132,9 @@
         </table>
       </section>
       <section id="newsletter">
-        <p id="newsletter-caption">Unlock a world of chess elegance!</p>
+        <div id="newsletter-banner">
+          <p id="newsletter-caption">Unlock a world of chess elegance!</p>
+        </div>
         <div>
           <span id="newsletter-sub-caption"
             >Subscribe to our newsletter for insider access to new arrivals, and
@@ -155,6 +155,7 @@
           </form>
           <div id="chess-video">
             <iframe
+              id="video"
               src="https://www.youtube.com/embed/-Tg9xiJ6D6k?si=QHT-hxl3zWjkd-Gp"
               title="YouTube video player"
               frameborder="0"
